// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Creating from existing Menus allows a navigation block to be created from existing menus 1`] = `
"<!-- wp:navigation {\\"orientation\\":\\"horizontal\\"} -->
<!-- wp:navigation-link {\\"label\\":\\"Home\\",\\"id\\":94} /-->

<!-- wp:navigation-link {\\"label\\":"Accusamus quo repellat illum magnam quas\\",\\"id\\":41} -->
<!-- wp:navigation-link {\\"label\\":"Debitis cum consequatur sit doloremque\\",\\"id\\":51} /-->
<!-- /wp:navigation-link -->

<!-- wp:navigation-link {\\"label\\":"Est ea vero non nihil officiis in\\",\\"id\\":53} -->
<!-- wp:navigation-link {\\"label\\":"Fuga odio quis tempora\\",\\"id\\":56} -->
<!-- wp:navigation-link {\\"label\\":"In consectetur repellendus eveniet maiores aperiam\\",\\"id\\":15} -->
<!-- wp:navigation-link {\\"label\\":"Mollitia maiores consequatur ea dolorem blanditiis\\",\\"id\\":45} -->
<!-- wp:navigation-link {\\"label\\":"Necessitatibus nisi qui qui necessitatibus quaerat possimus\\",\\"id\\":27} /-->
<!-- /wp:navigation-link -->
<!-- /wp:navigation-link -->
<!-- /wp:navigation-link -->
<!-- /wp:navigation-link -->

<!-- wp:navigation-link {\\"label\\":"Nulla omnis autem dolores eligendi\\",\\"id\\":43} /-->

<!-- wp:navigation-link {\\"label\\":"Sample Page\\",\\"id\\":2} /-->

<!-- wp:navigation-link {\\"label\\":"Beatae qui labore voluptas eveniet officia quia voluptas qui porro sequi et aut est\\",\\"id\\":7} -->
<!-- wp:navigation-link {\\"label\\":"Et minus itaque velit tempore hic quisquam saepe quas asperiores\\",\\"id\\":19} -->
<!-- wp:navigation-link {\\"label\\":"Et quas a et mollitia et voluptas optio voluptate quia quo unde aut in nostrum iste impedit quisquam id aut\\",\\"id\\":6} -->
<!-- wp:navigation-link {\\"label\\":"Illo quis sit impedit itaque expedita earum deserunt magni doloremque velit eum id error\\",\\"id\\":16} /-->
<!-- /wp:navigation-link -->
<!-- /wp:navigation-link -->
<!-- /wp:navigation-link -->

<!-- wp:navigation-link {\\"label\\":"WordPress.org\\",\\"id\\":108} -->
<!-- wp:navigation-link {\\"label\\":"Google\\",\\"id\\":109} /-->
<!-- /wp:navigation-link -->
<!-- /wp:navigation -->"
`;

exports[`Navigation Creating from existing Menus creates an empty navigation block when the selected existing menu is also empty 1`] = `
"<!-- wp:navigation {\\"orientation\\":\\"horizontal\\"} -->
<!-- wp:navigation-link /-->
<!-- /wp:navigation -->"
`;

exports[`Navigation Creating from existing Menus does not display option to create from existing menus if there are no menus 1`] = `"<!-- wp:navigation {\\"orientation\\":\\"horizontal\\"} /-->"`;

exports[`Navigation Creating from existing Pages allows a navigation block to be created using existing pages 1`] = `
"<!-- wp:navigation {\\"orientation\\":\\"horizontal\\"} -->
<!-- wp:navigation-link {\\"label\\":\\"Home\\",\\"id\\":1} /-->

<!-- wp:navigation-link {\\"label\\":\\"About\\",\\"id\\":2} /-->

<!-- wp:navigation-link {\\"label\\":\\"Contact Us\\",\\"id\\":3} /-->
<!-- /wp:navigation -->"
`;

exports[`Navigation Creating from existing Pages does not display option to create from existing Pages if there are no Pages 1`] = `"<!-- wp:navigation {\\"orientation\\":\\"horizontal\\"} /-->"`;

exports[`Navigation allows an empty navigation block to be created and manually populated using a mixture of internal and external links 1`] = `
"<!-- wp:navigation {\\"orientation\\":\\"horizontal\\"} -->
<!-- wp:navigation-link {\\"label\\":\\"WP\\",\\"url\\":\\"https://wordpress.org\\"} /-->

<!-- wp:navigation-link {\\"label\\":\\"Contact\\",\\"id\\":1,\\"url\\":\\"https://this/is/a/test/search/get-in-touch\\"} /-->
<!-- /wp:navigation -->"
`;

exports[`Navigation allows pages to be created from the navigation block and their links added to menu 1`] = `
"<!-- wp:navigation {\\"orientation\\":\\"horizontal\\"} -->
<!-- wp:navigation-link {\\"label\\":\\"A really long page name that will not exist\\",\\"id\\":1,\\"url\\":\\"https://this/is/a/test/create/page/my-new-page\\"} /-->
<!-- /wp:navigation -->"
`;
